--- a/src/app/components/products/products.component.scss
+++ b/src/app/components/products/products.component.scss
@@ -6,6 +6,7 @@ body{margin-top:20px;
     .panel {
         border: none;
         box-shadow: none;
+        cursor: pointer;
     }
     
     .panel-heading {
@@ -140,9 +141,7 @@ body{margin-top:20px;
         text-decoration: line-through;
     }
     
-    .quantity {
-        width: 120px;
-    }
+   
     
     .pro-img-list {
         margin: 10px 0 0 -15px;
@@ -160,3 +159,21 @@ body{margin-top:20px;
         font-size: 18px;
         font-weight: 300;
     }
+    .custom-select {
+        width: 100%;
+        padding: .375rem 1.75rem .375rem .75rem;
+        font-size: 1rem;
+        line-height: 1.5;
+        color: #495057;
+        vertical-align: middle;
+        background: #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%231b1b1b' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right .75rem center/8px 10px;
+        border: 1px solid #ced4da;
+        border-radius: .25rem;
+        appearance: none;
+        cursor: pointer;
+      }
+      .custom-select:focus {
+        border-color: #80bdff;
+        outline: 0;
+        box-shadow: 0 0 0 .2rem rgba(0,123,255,.25);
+      }
