--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary" style="cursor: pointer">
   <div class="container">
-    <a class="navbar-brand" routerLink="">Navbar</a>
+    <a class="navbar-brand" routerLink="">Store</a>
     <button
       class="navbar-toggler"
       type="button"
