--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -3,8 +3,8 @@
   rel="stylesheet"
 />
 <div class="container bootdey">
-  <div class="container">
-    <h2 class="mb-4">Select Category</h2>
+  <div class="d-flex mt-3">
+    <label class="mb-4">Select Category</label>
     <select
       id="categorySelect"
       class="custom-select"
