--- a/src/app/components/products/products.component.scss
+++ b/src/app/components/products/products.component.scss
@@ -1,7 +1,9 @@
 body{margin-top:20px;
     background:#f1f2f7;
     }
-    
+    .bootdey div{
+        justify-content: space-around;
+    }
     /*panel*/
     .panel {
         border: none;
